WebCore/bindings/v8/ScriptEventListener.cpp
@@ -46,6 +46,10 @@ namespace WebCore {
 PassRefPtr<V8LazyEventListener> createAttributeEventListener(Node* node, Attribute* attr)
 {
     ASSERT(node);
+    ASSERT(attr);
+    if (attr->isNull())
+        return 0;
+
     int lineNumber = 1;
     int columnNumber = 0;
     String sourceURL;
@@ -74,6 +78,11 @@ PassRefPtr<V8LazyEventListener> createAttributeEventListener(Node* node, Attribu
 PassRefPtr<V8LazyEventListener> createAttributeEventListener(Frame* frame, Attribute* attr)
 {
     if (!frame)
+        return 0;
+
+    ASSERT(node);
+    ASSERT(attr);
+    if (attr->isNull())
         return 0;
 
     int lineNumber = 1;
